Bug 1916692 - [devtools] Adapt linear easing button to High Contrast Mode. r=devtools-reviewers,jdescottes.
Differential Revision: https://phabricator.services.mozilla.com/D230644

UltraBlame original commit: fde9e82667ba4e90a6ba3af517dacee2af4986cc

--- a/devtools/client/themes/inspector-swatches.css
+++ b/devtools/client/themes/inspector-swatches.css
@@ -1163,55 +1163,6 @@ stroke
 #
 808080
 ;
-:
-root
-[
-forced
--
-colors
--
-active
-]
-&
-{
-fill
-:
-ButtonFace
-;
-stroke
-:
-var
-(
--
--
-theme
--
-icon
--
-color
-)
-;
-&
-:
-hover
-{
-stroke
-:
-var
-(
--
--
-theme
--
-icon
--
-hover
--
-color
-)
-;
-}
-}
 }
 .
 inspector
@@ -1307,4 +1258,84 @@ svg
 "
 )
 ;
+-
+moz
+-
+context
+-
+properties
+:
+stroke
+fill
+;
+fill
+:
+#
+fff
+;
+stroke
+:
+#
+808080
+;
+}
+:
+root
+[
+forced
+-
+colors
+-
+active
+]
+:
+is
+(
+.
+inspector
+-
+bezierswatch
+.
+inspector
+-
+lineareasingswatch
+)
+{
+fill
+:
+ButtonFace
+;
+stroke
+:
+var
+(
+-
+-
+theme
+-
+icon
+-
+color
+)
+;
+&
+:
+hover
+{
+stroke
+:
+var
+(
+-
+-
+theme
+-
+icon
+-
+hover
+-
+color
+)
+;
+}
 }
